modified script files

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,23 +27,7 @@ phases:
       - echo `pwd`
   post_build:
     commands:
-      - |
-        echo "Fetching DockerHub credentials from AWS Secrets Manager..."
-        aws secretsmanager get-secret-value --secret-id dockerhub_credentials --query SecretString --output text > dockerhub_credentials.json
-
-        DOCKERHUB_USERNAME=$(jq -r '.username' dockerhub_credentials.json)
-        DOCKERHUB_PASSWORD=$(jq -r '.password' dockerhub_credentials.json)
-
-        echo "Logging in to DockerHub..."
-        echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin
-
-        WEBAPP_IMAGE="${DOCKERHUB_USERNAME}/webapp"
-        webapp_fullname="${WEBAPP_IMAGE}:latest"
-
-        echo "Building and pushing WebApp image..."
-        docker buildx build --platform linux/amd64,linux/arm64 -t ${webapp_fullname} --push .
-
-        docker logout
+      - bash $CODEBUILD_SRC_DIR/build_and_push.sh $DOCKERHUB_USERNAME
 
 artifacts:
   files:
