--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,22 +2,24 @@ version: 0.2
 
 env:
   variables:
-    DOCKERHUB_USERNAME: "your-dockerhub-username"
+    # SDLC_ENVIRONMENT: "$1"
+    DOCKER_IMAGE_NAME: "$1"
+    DOCKERHUB_USERNAME: "$2"
+    # GIT_REPO: "https://git-codecommit.us-east-1.amazonaws.com/v1/repos/dockerecrtestbuild"
 phases:
   install:
     commands:
-      - apt-get update -y && apt-get install -y git jq
-      - pip install -r requirements.txt
+      - apt-get update -y && apt-get install -y git
   pre_build:
     commands:
-      - echo "This is CodeCommit Repo URL - $CODEBUILD_SOURCE_REPO_URL"
+      - echo "This is Codecommit Repo URL - $CODEBUILD_SOURCE_REPO_URL"
       - |
         REPO_NAME=$(echo "$CODEBUILD_SOURCE_REPO_URL" | awk -F "/" '{print $NF}')
         BRANCH_NAME=$(echo "$CODEBUILD_SOURCE_VERSION" | awk -F "/" '{print $NF}')
         echo "BRANCH_NAME is : $BRANCH_NAME"
         echo "CODEBUILD_SOURCE_REPO_URL is : $CODEBUILD_SOURCE_REPO_URL"
         echo "CODEBUILD_SOURCE_VERSION is : $CODEBUILD_SOURCE_VERSION"
-      - echo "This is CodeCommit Repo Name - $REPO_NAME"
+      - echo "This is Codecommit Repo Name - $REPO_NAME"
       - echo "This is the CODEBUILD_SRC_DIR - $CODEBUILD_SRC_DIR"
       - echo "This is the commit id from Source Control - $CODEBUILD_RESOLVED_SOURCE_VERSION"
   build:
@@ -25,10 +27,4 @@ phases:
       - echo "inside build commands and printing all the environment variables below"
       - printenv
       - echo `pwd`
-  post_build:
-    commands:
-      - bash $CODEBUILD_SRC_DIR/build_and_push.sh $DOCKERHUB_USERNAME
-
-artifacts:
-  files:
-    - '**/*'
+      - bash $CODEBUILD_SRC_DIR/scripts/build_and_push.sh $DOCKER_IMAGE_NAME $DOCKERHUB_USERNAME
